[package]
name = "rivet-head-cli"
version = "1.0.0"
edition = "2021"
description = "The CLI for interacting with the Rivet Head API"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeffmitchelldev.com>"]
repository = "https://github.com/sentinel1909/rivet-head-cli"
license = 'MIT'
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = [ "derive" ] }
reqwest = { version = "0.11.22", features = [ "json" ] }
tokio = { version = "1.35.1", features = ["full"] }
